@@ -4,6 +4,7 @@ Xfdesktop 4.x.y
   * Use Name field as display name of desktop files (bug #6896).
   * Support absolute icon paths in desktop files (bug #7160).
     Patch by xaizek@gmail.com.
+  * Scroll to the selected background in the settings (bug #7087).
 
 
 Xfdesktop 4.8.0
